tdf#135338 sw layout: show FirstLeft on very first left page style.

Although extremely unlikely, the Left Page style can have a different
Left and FirstLeft. In the even more unlikely case that the document
starts off using a left-page-only style, then the first header
would not show on the first page, but only on all of the following
left-only pages.

So, of course, we want the very first visible page in the document
to show the defined First header/footer.

Change-Id: I7e74fdc085509fb8d6b80f36d1402309b9db9404